# LearnOpenGL

./: CMakeLists.txt  main.cpp
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
shaders/: default.frag  default.vert
src/rendering/: shader.cpp  shader.h  shader.hpp
